--- a/ConfConnect/FRONTEND/src/app.scss
+++ b/ConfConnect/FRONTEND/src/app.scss
@@ -32,16 +32,16 @@
             font-size: 2rem;
             cursor: pointer;
             color: rgb(11, 132, 231);
-            width: 23%;
-            background-color: #0f0739;
+            width: 15%;
+            background-color: #000000;
         }
         
 .links-container {
         display: flex;
         justify-content: space-between;
-        background-color: #0f0739;
+        background-color: #000000;
         height: 60px;
-        width: 77%;
+        width: 85%;
         
     .login-btn{
           width: 15%;
