--- a/ConfConnect/FRONTEND/src/index.scss
+++ b/ConfConnect/FRONTEND/src/index.scss
@@ -15,10 +15,10 @@
 body {
   margin: 0;
   display: flex;
- 
+  align-items: center;
   min-width: 100%;
   min-height: 100%;
-  background-color: rgb(224, 15, 15);
+  background-color: rgb(15, 224, 109);
 }
 
 
