--- a/KonCall/FRONTEND/src/index.scss
+++ b/KonCall/FRONTEND/src/index.scss
@@ -15,7 +15,7 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  background-color: aqua;
   min-width: 320px;
   min-height: 30vh;
 }
