--- a/KonCall/FRONTEND/src/app.scss
+++ b/KonCall/FRONTEND/src/app.scss
@@ -1,19 +1,5 @@
-.heading
-{
-    background-color: rgb(3, 16, 26);
-    border-radius: 30%;
+@import url('https://fonts.googleapis.com/css2?family=Sedan:ital@0;1&display=swap');
 
-    margin-top: 150px;
-    margin-left:  2rem;
-    margin-right: 5rem;
-    .h1
-    {font-size: 80px;
-    margin-bottom: 10px;}
-    .s
-    {font-size: 120px;
-    color: rgb(11, 132, 231);
-    }
-}
 .logo{
         height: 6em;
         padding:0px;
@@ -26,22 +12,27 @@
         position: fixed;
         align-items: center;
         width: 100%;
-        background-color:  #d1cfdd;
+        
+       
     .navbar-heading {
-            font-weight: 700;
-            font-size: 2rem;
+            
+            font-size: 40px;
             cursor: pointer;
-            color: rgb(11, 132, 231);
+            color: rgb(33, 10, 247);
             width: 15%;
-            background-color: #000000;
+            font-family: "Sedan", serif;
+
+            span{
+                color:  rgb(255, 255, 255);;
+            }
+            
         }
         
 .links-container {
         display: flex;
         justify-content: space-between;
-        background-color: #000000;
         height: 60px;
-        width: 85%;
+        width: 45%;
         
     .login-btn{
           width: 15%;
@@ -53,7 +44,7 @@
     .link {
             color: white;
             text-decoration: none;
-            margin-inline: 2rem;
+            margin-inline: 1rem;
             padding: 1rem;
             
         }
