--- a/KonCall/FRONTEND/src/index.scss
+++ b/KonCall/FRONTEND/src/index.scss
@@ -15,9 +15,15 @@
 body {
   margin: 0;
   display: flex;
-  background-color: rgb(0, 0, 0);
-  min-width: 320px;
-  min-height: 30vh;
+  
+  min-width: 100%;
+  min-height: 100%;
+  background: rgb(215,51,33);
+background: linear-gradient(239deg, rgba(215,51,33,1) 0%, rgba(166,38,191,1) 35%, rgba(0,212,255,1) 100%);
+
+
+
+
 }
 
 
